        Reviewed by Mitz.

Patch for http://bugs.webkit.org/show_bug.cgi?id=14465
        window.open() uses the literal "undefined" as the URL

        * bindings/js/kjs_window.cpp:
        (KJS::WindowFunc::callAsFunction): add checks for undefined and null values when setting the url.
        * manual-tests/open-url-undefined.html: Added.



Canonical link: https://commits.webkit.org/18760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24018 268f45cc-cd09-0410-ab3c-d52691b4dbfc